--- a/views/message.ejs
+++ b/views/message.ejs
@@ -1,8 +1,8 @@
 <div class="messages">
   <% for (let i = 0; i < messages.length; i += 1) { %>
   <div class="message">
-    <h3 class="authorName"><%= messages[i].user %></h3>
-    <p class="messageText"><%= messages[i].text %></p>
+    <h3 class="authorName"><%= messages[i].username %></h3>
+    <p class="messageText"><%= messages[i].message %></p>
     <p class="addedTime"><%= messages[i].added %></p>
   </div>
 
